--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/bundle/ctrlp"]
 	path = vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/buffkill"]
+	path = bundle/buffkill
+	url = https://github.com/vim-scripts/bufkill.vim.git
