buffkill and zencoding vim plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "vim/bundle/ctrlp"]
 	path = vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "vim/bundle/buffkill"]
+	path = vim/bundle/buffkill
+	url = https://github.com/vim-scripts/bufkill.vim.git
+[submodule "vim/bundle/zencoding"]
+	path = vim/bundle/zencoding
+	url = https://github.com/vim-scripts/ZenCoding.vim.git
