Attempt to less-break clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,9 +25,9 @@ set -g mouse-select-window on
 
 # Copy into Mac OS X clipboard.
 # http://robots.thoughtbot.com/post/55885045171/tmux-copy-paste-on-os-x-a-better-future
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # "y" for yank in vi-copy mode.
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Highlight window name in status bar on activity.
 set-window-option -g monitor-activity on
