--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,12 @@
 [submodule "vim/bundle/editorconfig-vim"]
 	path = vim/bundle/editorconfig-vim
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "vim/bundles/vim-twig"]
+	path = vim/bundles/vim-twig
+	url = git@github.com:lunaru/vim-twig.git
+[submodule "vim/bundles/twig"]
+	path = vim/bundles/twig
+	url = git@github.com:lunaru/vim-twig.git
+[submodule "vim/bundle/vim-twig"]
+	path = vim/bundle/vim-twig
+	url = git@github.com:evidens/vim-twig.git
