--- a/tmux.conf
+++ b/tmux.conf
@@ -60,3 +60,6 @@ set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour235
 set -g pane-border-bg colour235
 set -g pane-border-fg colour235
+
+#Powerline
+source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
