--- a/tmux.conf
+++ b/tmux.conf
@@ -61,5 +61,7 @@ set -g pane-active-border-fg colour235
 set -g pane-border-bg colour235
 set -g pane-border-fg colour235
 
-#Powerline
+# Powerline
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
+bind s source-file ~/.tmux/default.session
