tmux opens with new session named after current dir

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,4 +64,4 @@ set -g pane-border-fg colour235
 # Powerline
 source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
-bind s source-file ~/.tmux/default.session
+source-file ~/.tmux/default.session
